--- a/packages/usp-components/package.json
+++ b/packages/usp-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "usp-components",
+  "name": "@usp/components",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2"
+  }
 }
