--- a/packages/usp-components/package.json
+++ b/packages/usp-components/package.json
@@ -2,7 +2,7 @@
   "name": "@usp/components",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "module": "build/components.bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-watch": "webpack --config webpack.config.js --watch",
@@ -16,11 +16,15 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "*",
     "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.1",
+    "css-what": "^5.0.1",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.3",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2"
   }
