Integration with @usp/components pckg wp-dev

--- a/core/package.json
+++ b/core/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --config webpack.config.dev.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
@@ -28,10 +30,15 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.38.1",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@usp/components": "file:../packages/usp-components",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "workspaces": [
+    "../packages/*"
+  ]
 }
