--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
   "description": "User's portal core project",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "eslint core/src/**/*.js core/src/**/*.jsx packages/usp-components/stories/**/*.js packages/usp-components/stories/**/*.jsx"
   },
   "author": "Lucas Ospina A.",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "2.3.1"
   }
 }
