--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "lint": "eslint core/src/**/*.js core/src/**/*.jsx packages/usp-components/stories/**/*.js packages/usp-components/stories/**/*.jsx"
+    "lint": "eslint core/src/**/*.{js,jsx} packages/usp-components/stories/**/*.{js,jsx}"
   },
   "author": "Lucas Ospina A.",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "babel-jest": "^27.0.2",
+    "enzyme": "^3.11.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.4",
     "prettier": "2.3.1"
   }
 }
