--- a/core/package.json
+++ b/core/package.json
@@ -35,8 +35,13 @@
   },
   "dependencies": {
     "@usp/components": "file:../packages/usp-components",
+    "gsap": "^3.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "workspaces": [
     "../packages/*"
