--- a/core/package.json
+++ b/core/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "react-hot-loader": "^4.13.0",
+    "redux-devtools": "^3.7.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
