--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/react-hooks": "^7.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "babel-jest": "^27.0.2",
     "enzyme": "^3.11.0",
@@ -30,6 +31,8 @@
     "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
-    "prettier": "2.3.1"
+    "prettier": "2.3.1",
+    "redux-freeze": "^0.1.7",
+    "redux-mock-store": "^1.5.4"
   }
 }
