--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@babel/preset-react": "^7.14.5",
     "@testing-library/react-hooks": "^7.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "axios-mock": "^1.0.1",
     "babel-jest": "^27.0.2",
     "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
